<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="search_for_artists">FIND THE ARTIST</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="artist_name">artist name</string>
    <string name="track_name">track name</string>
    <string name="album_name">album name</string>
    <string name="track_duration">03:46</string>
    <string name="artist_thumbnail">artist thumbnail</string>


    <string name="search_artist_hint">Find artists</string>
    <string name="no_result_found">No result found for\u0020</string>

    <string name="title_activity_detail">Top 10 Tracks</string>
    <string name="title_activity_play_track">PlayTrackActivity</string>

    <string name="start_time">00:00</string>
    <string name="end_time">03:21</string>


</resources>
